logs/products.linguaface.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/LinguaFace'...
Listing './lib/python3.5/site-packages/Products/LinguaFace/browser'...
Compiling './lib/python3.5/site-packages/Products/LinguaFace/browser/navigation.py'...
***   File "./lib/python3.5/site-packages/Products/LinguaFace/browser/navigation.py", line 95
    print context
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/LinguaFace/doc'...
Listing './lib/python3.5/site-packages/Products/LinguaFace/events'...
Listing './lib/python3.5/site-packages/Products/LinguaFace/exportimport'...
Listing './lib/python3.5/site-packages/Products/LinguaFace/interface'...
Compiling './lib/python3.5/site-packages/Products/LinguaFace/patches.py'...
***   File "./lib/python3.5/site-packages/Products/LinguaFace/patches.py", line 84
    raise AlreadyTranslated, translation.absolute_url()
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/LinguaFace/profiles'...
Listing './lib/python3.5/site-packages/Products/LinguaFace/profiles/default'...
Listing './lib/python3.5/site-packages/Products/LinguaFace/skins'...
Listing './lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface'...
Compiling './lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/folder_copy.py'...
***   File "./lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/folder_copy.py", line 19
    return context.plone_folder_copy()
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/folder_cut.py'...
***   File "./lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/folder_cut.py", line 19
    return context.plone_folder_cut()
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/folder_delete.py'...
***   File "./lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/folder_delete.py", line 18
    return context.plone_folder_delete()
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/getContentForLanguage.py'...
***   File "./lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/getContentForLanguage.py", line 26
    return translations.get(languageCode)[0]
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/getDeletableLanguages.py'...
***   File "./lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/getDeletableLanguages.py", line 18
    return languages
                   ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/getFolderContents.py'...
***   File "./lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/getFolderContents.py", line 58
    return batch
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/object_delete.py'...
***   File "./lib/python3.5/site-packages/Products/LinguaFace/skins/linguaface/object_delete.py", line 17
    return context.plone_object_delete()
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/LinguaFace/tests'...
Compiling './lib/python3.5/site-packages/Products/LinguaFace/tests/testCopyPast.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (testCopyPast.py, line 193)
Listing './lib/python3.5/site-packages/Products/LinguaFace/zmi'...
Listing './lib/python3.5/site-packages/Products.LinguaFace-3.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
